--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 
 </head>
 <body>
-    
+
     <header>
         <h1>Placas para las casas</h1>
     </header>
 
-    <h2>Modelos de las placas</h2>
+    <h2>Modelos</h2>
     <section>
         <article>
             <img src="img/img1.jpg" alt="imagen de placa">
